# maxima-mxpm

./: .gitattributes  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md
.claude/commands/: release.md
.github/workflows/: ci.yml  release.yml
crates/mxpm-core/: Cargo.toml
crates/mxpm-core/src/: lib.rs  manifest.rs  paths.rs
crates/mxpm-doc-index/: Cargo.toml
crates/mxpm-doc-index/src/: lib.rs  lint.rs  loader.rs  parser.rs
docs/: design.md  doc-index-format.md  ide-integration.md  mailing-list-discussions.md  markdown-authoring.md  native-code.md  package-documentation.md  prior-art.md  quicklisp-dependencies.md  requirements.md  roadmap.md  technical-requirements.md
docs/prior-art/: maxima-asdf.md  maxima-packages-repo.md  mext.md  pkg-maxima-template.md  share-directory.md
src/: config.rs  errors.rs  index.rs  info_index.rs  install.rs  lib.rs  manifest.rs  output.rs  paths.rs  quicklisp.rs  registry.rs  source.rs  types.rs
src/commands/: doc.rs  index.rs  info.rs  init.rs  install.rs  list.rs  mod.rs  new.rs  outdated.rs  publish.rs  remove.rs  search.rs  setup.rs  test.rs  upgrade.rs
src/commands/doc/: includes.rs  mdbook.rs  mod.rs  texi.rs  watch.rs
src/commands/doc/generate_core_docs/: emit.rs  markdown.rs  mod.rs  preprocess.rs  xml_parser.rs
src/commands/publish/: gh.rs  mod.rs  prepare.rs  submit.rs
src/doc_index/: html.rs  lint.rs  mod.rs  parser.rs
templates/basic/: README.md.tera  doc.md.tera  docs-ci.yml.tera  entry.mac.tera  gitignore.tera  manifest.toml.tera  pages.yml.tera  rtest.mac.tera  test_harness.mac.tera
tests/: cli.rs  doc_index.rs
tests/fixtures/: index.json
tests/fixtures/doc/: richpkg.md  testpkg-index.lisp  testpkg.info  testpkg.md  testpkg.texi
