[package]
name = "mxpm-core"
version = "0.1.0"
edition = "2024"
description = "Core types and utilities for the Maxima package ecosystem"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cmsd2/maxima-mxpm"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"
