[package]
name = "mxpm-doc-index"
version = "0.1.0"
edition = "2024"
description = "Doc-index types and parser for Maxima package documentation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cmsd2/maxima-mxpm"

[dependencies]
mxpm-core = { version = "0.1.0", path = "../mxpm-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"

[dev-dependencies]
tempfile = "3"
